# Tauri-PLC

./: tcp_plc.txt  websocket-test-client.html
.claude/: settings.local.json
plc-app/: DRAG_DROP_VIDEOS.md  index.html  package-lock.json  package.json  panel.html  tailwind.config.js  vite.config.ts
plc-app/.claude/: settings.local.json
plc-app/src/: App.tsx  panel.html  panel.tsx
plc-app/src-tauri/: Cargo.toml  tauri.conf.json
plc-app/src-tauri/capabilities/: default.json
plc-app/src-tauri/src/: database.rs  database_append.txt  lib.rs  main.rs  tcp_server.rs
plc-app/src/components/: AddBitConfigForm.tsx  AddVideoForm.tsx  CardModerno.tsx  Header.tsx  LEDPreview.tsx  Sidebar.tsx  TemplateEditor.tsx  VisualizationPanel.tsx  index.ts
plc-app/src/hooks/: usePlcData.ts
plc-app/src/pages/: PaginaBits.tsx  PaginaPublicidade.tsx  PaginaVisaoGeral.tsx
plc-app/src/services/: tauri.ts
plc-app/src/styles/: globals.css
plc-app/src/types/: index.ts
plc-app/src/utils/: templateParser.ts
plc-hmi/: CONFIGURACAO_ESTRUTURA.md  IDEIA_SISTEMA_ECLUSA.txt  Recomendacoes.txt  index.html  package-lock.json  package.json  tailwind.config.js
plc-hmi/src/: App.tsx
plc-hmi/src-tauri/: Cargo.toml  tauri.conf.json
plc-hmi/src-tauri/src/: commands.rs  config.rs  database.rs  lib.rs  plc_parser.rs  postgres.rs  tcp_server.rs  websocket_server.rs
plc-hmi/src/contexts/: NotificationContext.tsx
plc-hmi/src/hooks/: useNotifications.ts  useTcpServer.ts
plc-hmi/src/pages/: HomePage.tsx  SclAnalysisPage.tsx  ServicesPage.tsx  index.ts
plc-hmi/src/styles/: globals.css
(+22 files in other folders)
